<resources>
    <string name="app_name">InventoryAppStage2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving Book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating pet</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="category_all">All</string>
    <string name="category_novel">Novel</string>
    <string name="category_biography">Biography</string>
    <string name="category_history">History</string>
    <string name="category_health">Health</string>
    <string name="category_academics">Academics</string>
    <string name="category_science">Science</string>
    <string name="category_technology">Technology</string>
    <string name="category_politics">Politics</string>
    <string name="category_sports">Sports</string>
    <string name="category_unknown">Unknown</string>
    <string name="btn_order_book_text">Order Book</string>
    <string name="btn_sale_text">Sale</string>
    <string name="actionbar_title">Book Store</string>
    <string name="illegal_argument_exception_unknown">Cannot query unknown URI</string>
    <string name="illegal_argument_exception_insert">Insertion is not supported for</string>
    <string name="illegal_argument_exception_book_name">Book requires a name</string>
    <string name="illegal_argument_exception_book_category">Book requires a category</string>
    <string name="illegal_argument_exception_book_price">Book requires price</string>
    <string name="illegal_argument_exception_book_quantity">Book requires valid quantity</string>
    <string name="illegal_argument_exception_book_supplier_name">Book requires a supplier name</string>
    <string name="illegal_argument_exception_book_supplier_phonenumber">Book requires a supplier phone number</string>
    <string name="illegal_argument_exception_update">Update is not supported for</string>
    <string name="illegal_argument_exception_book_valid_price">Book requires valid price</string>
    <string name="illegal_argument_exception_book_valid_quantity">Book requires valid quantity</string>
    <string name="illegal_argument_exception_delete">Deletion is not supported for</string>
    <string name="illegal_argument_exception_get_type_unknown_uri">Unknown URI</string>
    <string name="illegal_argument_exception_get_type_with_match">with match</string>
    <string name="btn_sale_out_of_stock">Out of stock!</string>
    <string name="maximum_quantity_limit">Maximum quantity limit is 100.</string>
    <string name="negative_quantity">Quantity can not be negative.</string>
    <string name="negative_price">Price can not be negative.</string>
    <string name="invalid_phone_number">Phone number is invalid.</string>
    <string name="quantity_numeric_value">Please enter numeric value for quantity</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_discard">Discard</string>
    <string name="alert_dialog_keep_editing">Keep Editing</string>
    <string name="empty_data_toast_message">Field cannot be blank</string>
    <string name="alert_dialog_invalid_data">Please enter valid data.</string>
    <string name="search_hint">Search by book name</string>
    <string name="book_name">Book Name</string>
    <string name="book_category">Category</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_supplier_name">Supplier Name</string>
    <string name="book_supplier_phone_number">Supplier Phone Number</string>
    <string name="editor_btn_increase_quantity">Increase Quantity</string>
    <string name="editor_btn_decrease_quantity">Decrease Quantity</string>
    <string name="empty_book_store_image">Empty book store image</string>
    <string name="action_search_title">search</string>
</resources>
