<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_grey"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_16dp"
    android:paddingLeft="@dimen/padding_16dp"
    android:paddingEnd="@dimen/padding_16dp"
    android:paddingRight="@dimen/padding_16dp">

    <TextView
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/color_dark_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/ListViewDataTableStyle">

            <TextView
                style="@style/ListViewDataTableHeadingStyle"
                android:text="@string/book_category" />

            <TextView
                android:id="@+id/book_category"
                style="@style/ListViewDataTableRowStyle" />

        </LinearLayout>

        <LinearLayout
            style="@style/ListViewDataTableStyle">

            <TextView
                style="@style/ListViewDataTableHeadingStyle"
                android:text="@string/book_price" />

            <TextView
                android:id="@+id/book_price"
                style="@style/ListViewDataTableRowStyle" />

        </LinearLayout>

        <LinearLayout
            style="@style/ListViewDataTableStyle">

            <TextView
                style="@style/ListViewDataTableHeadingStyle"
                android:text="@string/book_quantity" />

            <TextView
                android:id="@+id/book_quantity"
                style="@style/ListViewDataTableRowStyle" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp">

        <Button
            android:id="@+id/btn_order_book"
            style="@style/ListViewButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_order_book_text" />

        <Button
            android:id="@+id/btn_book_sale"
            style="@style/ListViewButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_sale_text" />

    </RelativeLayout>

</LinearLayout>